--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-<% @students.each do |s| %>
-<div><%= s.to_s %></div>
-<% end %>
+  <% @students.each do |student| %>
+    <li><%= student.first_name + " " + student.last_name %></li>
+  <% end %>
 </div>
